# link-desk

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEV-RULES.md  LICENSE  PRD.md  README.md  STRUCTURE.md  package-lock.json  package.json
desktop-app/: .env.example  README.md  eslint.config.js  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
desktop-app/src/: App.tsx  app-state.tsx  index.css  main.tsx
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/src/: errors.rs  lib.rs
desktop-app/src-tauri/src/commands/: consent.rs  input_injection.rs  machine_id.rs  mod.rs  overlay.rs  pin.rs  screen_info.rs
desktop-app/src-tauri/src/core/: input_mapper.rs  mod.rs  screen_info.rs  stronghold.rs
desktop-app/src/components/: copy-button.tsx  hero-buttons.tsx  host-session-widget.tsx  pin-display.tsx  pin-input.tsx  pin-timer.tsx  regenerate-button.tsx  remote-screen.tsx  session-toolbar.tsx  status-badge.tsx
desktop-app/src/lib/: cn.ts  tauri.ts  utils.ts
desktop-app/src/routes/: controller-connecting.tsx  controller-session.tsx  controller.tsx  home.tsx  host-session.tsx  host.tsx  overlay.tsx
desktop-app/src/types/: tauri-commands.ts
desktop-app/tests/: app.test.tsx  setup.ts
desktop-app/tests/features/: pin-generator.test.ts  signaling-client.test.ts  use-pin.test.tsx  use-signaling.test.tsx
docs/superpowers/plans/: 2026-04-18-phase-1-setup-ui-statique.md  2026-04-21-phase-2-signaling.md  2026-04-22-phase-3-webrtc.md  2026-05-01-phase-4-streaming-control.md
docs/superpowers/reports/: 2026-04-18-phase-1-report.md  (+2 more)
signaling-server/: .env.example  README.md  eslint.config.js  package.json  tsconfig.json  vitest.config.ts
signaling-server/src/: index.ts  server.ts
signaling-server/tests/: setup.ts
(+61 files in other folders)
