[package]
name = "desktop-app"
version = "0.1.0"
description = "LinkDesk desktop client (host + controller)"
authors = ["LinkDesk contributors"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# Direct iota_stronghold access for Rust-side store operations (get/insert/commit).
# No `tauri-plugin-stronghold` needed: no JS caller in Phase 1, and dual ownership
# of the snapshot file (plugin + direct instance) would race on commits.
iota_stronghold = "2"
# Zeroize: securely wipe sensitive bytes from memory
zeroize = { version = "1", features = ["zeroize_derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
thiserror = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["sync", "time", "macros"] }
tauri-plugin-dialog = "2"
enigo = "0.2"
tauri-plugin-global-shortcut = "2"
# Explicit dep to unlock Win32 features needed for screen info (resolution + DPI).
# Version matches the transitive dep already pulled by tauri-plugin-global-shortcut.
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_HiDpi"] }
